# Wool

./: .gitignore  README.md  compute_pi.py  hello_subagent.py  install.sh  parse_transcript.py  pyproject.toml  random_script.py  test_api.py  test_bash.py  test_bg.py  test_bg2.py  test_blank.py  test_cli.py  test_cli_consume.py  test_empty.py  test_empty_lines.py  test_end_to_end.py  test_end_to_end_crlf.py  test_expansion.py  test_httpx.py  test_live_md.py  test_nl.py  test_parallel.py  test_proxy.py  test_proxy_user.py  test_pt.py  test_raw_api.py  test_search.py  test_search2.py  test_search3.py  test_search4.py  test_session.py  test_session_arrows.py  test_session_delete_active.py  test_session_delete_default.py  test_session_dup.py  test_session_escape.py  test_session_interactive.py  test_session_loop.py  (+16 more)
docs/: index.html  install.sh
wool/: __init__.py  __main__.py  agent.py  cli.py  config.py
wool/commands/: __init__.py  slash.py
wool/mcp/: __init__.py  client.py  manager.py
wool/providers/: __init__.py  base.py  openai_compat.py  registry.py
wool/tools/: __init__.py  base.py  bash.py  code_intel.py  fs_read.py  fs_write.py  multi_tool.py  registry.py  subagent.py  web_fetch.py  web_search.py
wool/utils/: __init__.py  ansi.py  markdown.py  menu.py  streaming.py  syntax.py  tag_parser.py
