[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wool"
version = "0.1.0"
description = "Ultra-lightweight CLI AI Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "aiofiles>=24.1",
]

[project.scripts]
wool = "wool.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["wool"]
