[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wool"
version = "1.0.0"
description = "Ultra-lightweight CLI AI Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "aiofiles>=24.1",
    "pyperclip>=1.8.2",
    "termux-api (>=1.2.5.3,<2.0.0.0)",
]

[project.scripts]
wool = "wool.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["wool"]

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "types-aiofiles (>=25.1.0.20260518,<26.0.0.0)",
    "types-pyperclip (>=1.11.0.20260508,<2.0.0.0)"
]
